--- a/style.css
+++ b/style.css
@@ -1,5 +1,107 @@
+body {
+    font-family: Arial, sans-serif;
+    background-color: #f4f4f4;
+    margin: 0;
+    padding: 0;
+}
+
+
+
+
+
+.btn {
+    padding: 10px 20px;
+    background-color: #28a745;
+    color: #fff;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+.btn:hover {
+    background-color: #218838;
+}
+
+
 .dd {
     width: 300px;
     height: 100px;
     background-color: brown;
+}
+
+.model {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    justify-content: center;
+    align-items: center;
+}
+
+.model-window {
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 8px;
+    text-align: center;
+}
+
+.model-msg {
+    margin-bottom: 20px;
+}
+
+.modal-window button {
+    margin: 0 10px;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+#del {
+    background-color: #dc3545;
+    color: #fff;
+}
+
+#del:hover {
+    background-color: #c82333;
+}
+
+#cenle {
+    background-color: #6c757d;
+    color: #fff
+}
+
+#cenle:hover {
+    background-color: #5a6268;
+}
+
+.name-input {
+    width: 70%;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+}
+
+.iten {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px;
+    border-bottom: 1pxn solid #ccc;
+}
+
+.iten button {
+    background-color: #dc3545;
+    color: #fff;
+    border: none;
+    border-radius: 4px;
+    padding: 5px 10px;
+    cursor: pointer;
+}
+
+.iten button:hover {
+    background-color: #c82333;
 }
